Adds markdown previewer

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,16 +51,16 @@
                                             <figcaption><a href="/Chess-Board-2Player">2-Player Online Chess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="/GIPHY-API-Webpage"><img src="assets/images/portfolio/giphy.png" alt="GIPHY & OMDb API Webpage" class="img-fluid"></a>
-                                            <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
+                                            <a href="/Markdown-Previewer"><img src="assets/images/portfolio/markdown.png" alt="React Markdown Previewer" class="img-fluid"></a>
+                                            <figcaption><a href="/Markdown-Previewer">React Markdown Previewer</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="/RPS-Multiplayer"><img src="assets/images/portfolio/rps.png" alt="Rock Paper Scissors Multiplayer" class="img-fluid"></a>
-                                            <figcaption><a href="/RPS-Multiplayer/">Rock, Paper, Scissors Multiplayer</a></figcaption>
-                                        </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="/kcrmccoy"><img src="assets/images/portfolio/kcrmccoy.png" alt="KCRMCCOY Portfolio Site" class="img-fluid"></a>
                                             <figcaption><a href="/kcrmccoy">Kcrmccoy LEGO Portfolio</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="/GIPHY-API-Webpage"><img src="assets/images/portfolio/giphy.png" alt="GIPHY & OMDb API Webpage" class="img-fluid"></a>
+                                            <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://davidstarr.me/Calculator.html"><img class="img-fluid" src="assets/images/portfolio/Calculator.png" alt="JavaScript Calculator"></a>
@@ -91,8 +91,8 @@
                                             <figcaption><a href="http://davidstarr.me/TwitchViewer.html">Twitch API Demonstration</a></figcaption>                                                
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
-                                            <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
+                                            <a href="/RPS-Multiplayer"><img src="assets/images/portfolio/rps.png" alt="Rock Paper Scissors Multiplayer" class="img-fluid"></a>
+                                            <figcaption><a href="/RPS-Multiplayer/">Rock, Paper, Scissors Multiplayer</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">1
                                             <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
@@ -103,8 +103,8 @@
                                             <figcaption><a href="js-MIDISCORE">MIDI to Score Converter</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
-                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
+                                            <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
+                                            <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
@@ -117,6 +117,10 @@
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
                                             <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
                                             <figcaption><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
+                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
