--- a/contact.html
+++ b/contact.html
@@ -3,76 +3,102 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en_us"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Contact Me</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="icon" href="assets/images/me.jpg">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div>
-            <div class="container-fluid">
-                <div class="row header">
-                    <div class="container">
-                        <header class="row">
-                            <h1 class="col-md-6 col-lg-5 col-xl-4 col-sm-12 heading text-center no-gutters">David L. Starr</h1>
-                            <div class="col-lg-2 col-xl-4 col-md-1"></div>
-                            <div class="text-right col-md-5 col-lg-5 col-xl-4 col-sm-12 no-padding">
-                                <nav class="navbar navbar-right">
-                                    <a class="nav-link nav-item active" href="index.html">About Me</a><a class="nav-link nav-item" href="portfolio.html">Portfolio</a><a class="nav-link nav-item" href="contact.html">Contact</a>
-                                </nav>
-                            </div> 
-                        </header>
-                    </div>
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>David L. Starr</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel=icon href="images/boys.jpg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <link href="css/bootstrapEdits.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/style.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>     
+  </head>
+  <body>
+      <!--[if lt IE 7]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
+      <div class="container-fluid">
+          <div class="row row-centered">
+              <div class="col-xs-12 col-centered">
+                  <div class="row city">
+                      <div class="col-sm-12 center">
+                          <div class="">
+                              <a href="index.html"><h1>David L. Starr</h1></a>
+                              <div class="row">
+                                  <img class="col-sm-10 offset-sm-1 underline img-fluid" src="images/underline.png">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row bar">
+                      <div class="container">
+                          <div class="col-md-8 col-sm-12 col-centered">
+                              <div class="navbar navbar-expand-lg">
+                                  <a href="bio.html" data-href="bio" class="col-xs-3 nav-item nav-link active">Bio</a>
+                                  <a href="portfolio.html" data-href="portfolio" class="col-xs-3 nav-item nav-link">Portfolio</a>
+                                  <a href="resume.html" data-href="resume" class="col-xs-3 nav-item nav-link">Resume</a>
+                                  <a href="contact.html" data-href="contact" class="col-xs-3 nav-item nav-link">Contact</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row content-row">
+            <div class="container content active" id="content">
+              <div class="row">
+                <div class="col-sm-12">
+                  <p id="thanks" class="col-sm-12 center"><b>Thank you for visiting my website! Feel free to contact me on any of these outlets.</b></p>
                 </div>
+              </div>
+              <div class="row contact-info">
+                <div id="address" class="col-sm-4 col-md-4 inactive">
+                  <div class="contact-col">
+                    <p><strong class="space">Location</strong></p>
+                    <p class="nospace bold">David L. Starr</p>
+                    <p class="nospace">Oakland, CA. 94602</p>
+                  </div>
+                </div>
+                <div id="phone" class="col-sm-4 col-md-4 inactive">
+                  <div class="contact-col">
+                    <p><strong class="space">Phone</strong><p>
+                    <p class="nospace">Cell: <u>(773) 454-1839</u></p>
+                    <p class="nospace">Discord: <u>HzDonut#2590</u></p>
+                  </div>
+                </div>
+                <div id="emails" class="col-sm-4 col-md-4 inactive">
+                  <div class="contact-col">
+                    <p><strong class="space">Email</strong></p>
+                    <p class="nospace">Personal: <small><a class="email-link" href="mailto:dstarrtrey@gmail.com"><u>dstarrtrey@gmail.com</u></a></small></p>
+                    <p class="nospace">Spam: <small><u>treystarr10@yahoo.com</u></small></p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3 center soc-med">
+                  <a target="_blank" href="http://www.linkedin.com/in/David-L-Starr"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <div class="col-3 center soc-med">
+                  <a target="_blank" href="http://www.github.com/dstarrtrey"><i class="fab fa-github-square"></i></a>
+                </div>
+                <div class="col-3 center soc-med">
+                    <a target="_blank" href="http://www.instagram.com/flavorxdave"><i class="fab fa-instagram"></i></a>
+                  </div>
+                <div class="col-3 center soc-med">
+                  <a target="_blank" href="http://www.twitter.com/whoisDavidStarr"><i class="fab fa-twitter-square"></i></a>
+                </div>
+                <!-- 
+                  ADD SOCIAL MEDIA HERE  
+                -->
+              </div>
             </div>
-            <div class="container main">
-                <main class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="no-padding col-md-12">
-                                <h2>Contact</h2>
-                                <hr>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <form action="/assets/action_page.php">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input class="text-input form-control" id="name" type="text" name="name" placeholder="John Smith">
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input class="text-input form-control" id="email" type="email" name="email" placeholder="example@gmail.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">Message</label>
-                                    <textarea class="text-input message form-control" id="message" type="text" name="message" value=""></textarea>    
-                                </div>    
-                                <br>
-                                <input class="btn btn-primary submit-button" type="submit" value="Submit">
-                            </form>
-                        </div>    
-                    </div>
-                </main>
-            </div>
-        </div>         
-        <div class="container-fluid footer">
-            <footer class="row text-center block">
-                <p class="col-xs-12">Copyright David Starr 2018 ©</p>
-            </footer>
-        </div>
-        <script src="" async defer></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </body>
+          </div>
+      </div>
+      <script src="js/index.js"></script>
+  </body>
 </html>
