--- a/index.html
+++ b/index.html
@@ -3,67 +3,58 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en_us"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>David L. Starr</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="icon" href="assets/images/me.jpg">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>David L. Starr</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel=icon href="images/boys.jpg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <link href="css/bootstrapEdits.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/style.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div>
-            <div class="container-fluid">
-                <div class="row header">
-                    <div class="container">
-                        <header class="row">
-                            <h1 class="col-md-6 col-lg-5 col-xl-4 col-sm-12 heading text-center no-gutters">David L. Starr</h1>
-                            <div class="col-lg-2 col-xl-4 col-md-1"></div>
-                            <div class="text-right col-md-5 col-lg-5 col-xl-4 col-sm-12 no-padding">
-                                <nav class="navbar navbar-right">
-                                    <a class="nav-link nav-item active" href="index.html">About Me</a><a class="nav-link nav-item" href="portfolio.html">Portfolio</a>
-                                </nav>
-                            </div> 
-                        </header>
-                    </div>
-                </div>
-            </div>
-            <div class="container main">
-                <main class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="no-padding col-md-12">
-                                <h2>About Me</h2>
-                                <hr>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-10 col-lg-8 col-centered homepage">
+                    <div class="row city">
+                        <div class="col-sm-12 center">
+                        <div class="items">
+                            <img src="images/boys.jpg" id="boys" alt="Profile Image" class="homepage-img">  
+                            <a href="index.html"><h1>David L. Starr</h1></a>
+                            <div class="row">
+                                <img class="col-sm-10 offset-sm-1 underline img-fluid" src="images/underline.png">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <img src="assets/images/me.jpg" alt="David L. Starr" class="no-padding img-fluid profile float-left col-md-3 col-sm-6">
-                                <div class="">
-                                    <p>David Starr is a developer from Oakland, California. After graduating from Lane Tech College Prep in Chicago, Illinois in 2014, he embarked on a month-long cross-continental bicycling trip from Oslo, Norway to Athens, Greece. In addition to broadening his scope of the world's beauty and cultures, the trip also inadvertently offered time to delve into the masterpiece of The Brothers Karamazov by David's all-time favorite author Fyodor Dostoyevsky—whose philosophy developed a passion for truth that came to fruition in a variety of ways.</p>
-                                    <p>The fall after, David enrolled in North Park University's physics program, in a way of pursuing truth in a way he had always excelled. During his time there he joined Vista Magazine as their founding Web Content Strategist. He also independently pursued certificates in Front-End Web Development through FreeCodeCamp.org, two of which he completed in 2018. He graduated from North Park May 12, 2018 with a B.S. in Physics and Minor in Mathematics and is now enrolled in a Full-Stack Web Development Boot Camp with the University of California, Berkeley as he pursues web development in the Bay area.</p>    
+                        </div>
+                    </div>
+                    <div class="row bar">
+                        <div class="container">
+                            <div class="col-md-8 col-sm-12 col-centered">
+                                <div class="navbar navbar-expand-lg">
+                                    <a href="bio.html" data-href="bio" class="col-xs-3 nav-item nav-link active">Bio</a>
+                                    <a href="portfolio.html" data-href="portfolio" class="col-xs-3 nav-item nav-link">Portfolio</a>
+                                    <a href="resume.html" data-href="resume" class="col-xs-3 nav-item nav-link">Resume</a>
+                                    <a href="contact.html" data-href="contact" class="col-xs-3 nav-item nav-link">Contact</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </main>
+                </div>
+            </div>
+            <div class="row content-row">
+                <div class="container-fluid content active" id="content">
+                </div>
             </div>
         </div>
-        <div class="container-fluid footer">
-            <footer class="row text-center block">
-                <p class="col-xs-12">Copyright David Starr 2018 ©</p>
-            </footer>
-        </div>
-        <script src="" async defer></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
