Bolds resume text

--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,8 @@
             </div>
             <div class="row content-row">
                 <div class="container content active" id="content">
-                  <p class="col-sm-12 center nospace">Thank you for taking the time to see my resume!</p>
-                  <p class="col-sm-12 center nospace" ><a href="David_Starr_Resume.pdf" download="David Starr Resume">Download here</a></p>
+                  <p class="col-sm-12 center nospace"><b>Thank you for taking the time to see my resume!</b></p>
+                  <p class="col-sm-12 center nospace" ><b><a href="David_Starr_Resume.pdf" download="David Starr Resume">Download here</a></b></p>
                   <div class="embed-responsive" style="padding-bottom: 100%">
                     <object class="resume-obj col-sm-12" data="David_Starr_Resume.pdf#view=FitH"></object>
                   </div>
