Adds soundboard to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,59 +110,62 @@
                         </div>
                     </div>
                     <div class="row col-xs-12">
-                            <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="/js-MIDISCORE"><img alt="Senior Project" src="images/SeniorProject.png" class="portfolio-image img-responsive"></a>
-                                <figcaption class="caption"> MIDI converter that uses <a href="http://github.com/Tonejs/MidiConvert">MidiConvert</a> and <a href="http://github.com/MrRio/jsPDF">jsPDF</a> libraries to convert into visible sheet music in the form of a PDF. The program can be seen <a href="/js-MIDISCORE">here</a> and on <a href="http://www.github.com/dstarrtrey/js-MIDISCORE">GitHub</a>.</figcaption>
-                            </figure>
-                            <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://www.freecodecamp.org/dstarrtrey"><img src="images/profile.png" alt="FreeCodeCamp Profile" class="portfolio-image img-responsive"></a>
-                                <figcaption class="caption">I have nearly 600 projects, algorithms, and lessons completed on FreeCodeCamp.org. View my profile and progress <a href="http://www.freecodecamp.org/dstarrtrey">here</a>.</figcaption>
-                            </figure>
-                            <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img src="images/cert.png" alt="FreeCodeCamp JavaScript Certificate" class="portfolio-image img-responsive"></a>
-                                <figcaption class="caption">FreeCodeCamp offers 6 certificates and thousands of lessons for their Full Stack program. These are a couple <a href="http://www.freecodecamp.org/dstarrtrey/">certificates</a> that I have been awarded thus far.</figcaption>
-                            </figure>
-                            <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://www.github.com/dstarrtrey/MusicBox/"><img src="images/port2.gif" alt="Music Box Animation" class="portfolio-image img-responsive"></a>
-                                <figcaption class="caption">I designed a music box from scratch using SolidWorks, TuxGuitar, and Cura. All musical work was done by ear. Additional images and the project itself can be found on its <a href="http://github.com/dstarrtrey/MusicBox/">GitHub repository</a>.</figcaption>
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="/Wikipedia-Viewer"><img src="images/port3.jpg" alt="Wikipedia Viewer" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">A <a href="/Wikipedia-Viewer">Wikipedia viewer</a> I programmed by learning Wikipedia's API and accessing it with JQuery. It also help develop understanding of CSS/JavaScript transitions and animations.</figcaption>                                
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="/GIPHY-API-Webpage"><img src="images/giphy-api.png" alt="GIPHY & OMDb API App" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">A <a href="/GIPHY-API-Webpage">webapp</a> using GIPHY and OMDb's APIs to input a search query (presumably a movie) and display related gifs and movie/tv show information. For the code, see the <a href="http://www.github.com/dstarrtrey/GIPHY-API-Webpage">GitHub</a></figcaption>
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="/Calculator"><img src="images/Calculator.png" alt="JavaScript Calculator" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">This is a <a href="/Calculator">calculator</a> page I coded using JavaScript and CSS heavily to mimic many qualities of a simple physical calculator.</figcaption>
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="Quote-Generator"><img src="images/port6.jpg" alt="Quote Generator" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">A <a href="/Quote-Generator">random quote generator</a> I programmed using JavaScript and the words of some of my favorite philosophers and theologians.</figcaption>                                
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://codepen.io/dstarrtrey/pen/vjqqrw"><img src="images/pomodoro.png" alt="Pomodoro Clock" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">This is a <a href="http://codepen.io/dstarrtrey/pen/vjqqrw">Pomodoro Clock</a> programmed using JQuery. It allows you to set a timer to follow and take a set break after the length of every specified session length.</figcaption>                            
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="/Weather-API-Webpage"><img src="images/port5.jpg" alt="GPS Weather App" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">This is a <a href="/Weather-API-Webpage">GPS-based weather site</a> I programmed using JQuery and FreeCodeCamp's API (Which is updated frequently, despite my attempts to keep the page current).</figcaption>                            
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://www.vistamag.org"><img src="images/port10.jpg" alt="Vista Magazine Home Page Screenshot" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">I am the founding Web Content Strategist at <a href="http://www.vistamag.org">Vista Magazine</a> and a contributing writer. This position required a limited amount of HTML and CSS, however developed my understanding of social media outreach, engagement and content organization.</figcaption>                            
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://walkitoff.bandcamp.com/releases"><img src="images/port11.jpg" alt="Walk it Off Album Cover" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">I wrote the album "Inside Joke" by <a href="http://www.facebook.com/walkitoffil">Walk it Off</a> and recorded guitar, bass, and some vocals for it. It can be <a href="http://walkitoff.bandcamp.com/releases">downloaded</a> and streamed on all major platforms.</figcaption>                            
-                            </figure>
-                            <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
-                                <a class="middle" href="http://github.com/dstarrtrey/Compositions"><img src="images/port12.jpg" alt="TuxGuitar Screenshot" class="img-responsive portfolio-image"></a>
-                                <figcaption class="caption">I have been writing music for over 6 years with various bands. I have developed several original compositions using TuxGuitar MIDI processor. The repository can be found on <a href="http://github.com/dstarrtrey/Compositions">GitHub</a>.</figcaption>                            
-                            </figure>
-                        </div>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/drum-machine"><img alt="React Soundboard" src="images/soundboard.png" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">Soundboard made using React with a few soundbytes from my own music or friends' voice recordings I have. This was made with create-react-app for freeCodeCamp's Front End Libraries certification. Code is located on <a href="http://www.github.com/dstarrtrey/drum-machine">GitHub</a></figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/js-MIDISCORE"><img alt="Senior Project" src="images/SeniorProject.png" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption"> MIDI converter that uses <a href="http://github.com/Tonejs/MidiConvert">MidiConvert</a> and <a href="http://github.com/MrRio/jsPDF">jsPDF</a> libraries to convert into visible sheet music in the form of a PDF. The program can be seen <a href="/js-MIDISCORE">here</a> and on <a href="http://www.github.com/dstarrtrey/js-MIDISCORE">GitHub</a>.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.freecodecamp.org/dstarrtrey"><img src="images/profile.png" alt="FreeCodeCamp Profile" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">I have nearly 600 projects, algorithms, and lessons completed on FreeCodeCamp.org. View my profile and progress <a href="http://www.freecodecamp.org/dstarrtrey">here</a>.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img src="images/cert.png" alt="FreeCodeCamp JavaScript Certificate" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">FreeCodeCamp offers 6 certificates and thousands of lessons for their Full Stack program. These are a couple <a href="http://www.freecodecamp.org/dstarrtrey/">certificates</a> that I have been awarded thus far.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.github.com/dstarrtrey/MusicBox/"><img src="images/port2.gif" alt="Music Box Animation" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">I designed a music box from scratch using SolidWorks, TuxGuitar, and Cura. All musical work was done by ear. Additional images and the project itself can be found on its <a href="http://github.com/dstarrtrey/MusicBox/">GitHub repository</a>.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/Wikipedia-Viewer"><img src="images/port3.jpg" alt="Wikipedia Viewer" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">A <a href="/Wikipedia-Viewer">Wikipedia viewer</a> I programmed by learning Wikipedia's API and accessing it with JQuery. It also help develop understanding of CSS/JavaScript transitions and animations.</figcaption>                                
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/GIPHY-API-Webpage"><img src="images/giphy-api.png" alt="GIPHY & OMDb API App" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">A <a href="/GIPHY-API-Webpage">webapp</a> using GIPHY and OMDb's APIs to input a search query (presumably a movie) and display related gifs and movie/tv show information. For the code, see the <a href="http://www.github.com/dstarrtrey/GIPHY-API-Webpage">GitHub</a></figcaption>
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/Calculator"><img src="images/Calculator.png" alt="JavaScript Calculator" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">This is a <a href="/Calculator">calculator</a> page I coded using JavaScript and CSS heavily to mimic many qualities of a simple physical calculator.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="Quote-Generator"><img src="images/port6.jpg" alt="Quote Generator" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">A <a href="/Quote-Generator">random quote generator</a> I programmed using JavaScript and the words of some of my favorite philosophers and theologians.</figcaption>                                
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://codepen.io/dstarrtrey/pen/vjqqrw"><img src="images/pomodoro.png" alt="Pomodoro Clock" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">This is a <a href="http://codepen.io/dstarrtrey/pen/vjqqrw">Pomodoro Clock</a> programmed using JQuery. It allows you to set a timer to follow and take a set break after the length of every specified session length.</figcaption>                            
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="/Weather-API-Webpage"><img src="images/port5.jpg" alt="GPS Weather App" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">This is a <a href="/Weather-API-Webpage">GPS-based weather site</a> I programmed using JQuery and FreeCodeCamp's API (Which is updated frequently, despite my attempts to keep the page current).</figcaption>                            
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.vistamag.org"><img src="images/port10.jpg" alt="Vista Magazine Home Page Screenshot" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">I am the founding Web Content Strategist at <a href="http://www.vistamag.org">Vista Magazine</a> and a contributing writer. This position required a limited amount of HTML and CSS, however developed my understanding of social media outreach, engagement and content organization.</figcaption>                            
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://walkitoff.bandcamp.com/releases"><img src="images/port11.jpg" alt="Walk it Off Album Cover" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">I wrote the album "Inside Joke" by <a href="http://www.facebook.com/walkitoffil">Walk it Off</a> and recorded guitar, bass, and some vocals for it. It can be <a href="http://walkitoff.bandcamp.com/releases">downloaded</a> and streamed on all major platforms.</figcaption>                            
+                        </figure>
+                        <figure class="portfolio-item col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://github.com/dstarrtrey/Compositions"><img src="images/port12.jpg" alt="TuxGuitar Screenshot" class="img-responsive portfolio-image"></a>
+                            <figcaption class="caption">I have been writing music for over 6 years with various bands. I have developed several original compositions using TuxGuitar MIDI processor. The repository can be found on <a href="http://github.com/dstarrtrey/Compositions">GitHub</a>.</figcaption>                            
+                        </figure>
                     </div>
                 </div>  
             </div>
