Adds CLI apps to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,14 @@
                     </div>
                     <div class="row col-xs-12">
                         <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.github.com/dstarrtrey/CLI-Storefront"><img alt="CLI Storefront Simulator App" src="images/bamazon-manager.gif" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">Command Line app that allows the user to make purchases, restock inventory, add new products, add departments, and check total sales and profits by department, all stored in a MySQL database.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://www.github.com/dstarrtrey/liri-node-app"><img alt="CLI Siri mock" src="images/movie-this.gif" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">Command Line app for searching spotify, bandsintown, and omdb APIs for song, concert, and movie data respectively. Logs all requests in a .txt file after logging to the terminal.</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
                             <a class="middle" href="/drum-machine"><img alt="React Soundboard" src="images/soundboard.png" class="portfolio-image img-responsive"></a>
                             <figcaption class="caption">Soundboard made using React with a few soundbytes from my own music or friends' voice recordings I have. This was made with create-react-app for freeCodeCamp's Front End Libraries certification. Code is located on <a href="http://www.github.com/dstarrtrey/drum-machine">GitHub</a></figcaption>
                         </figure>
