--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,10 @@
                             <figcaption class="caption">Command Line app for searching spotify, bandsintown, and omdb APIs for song, concert, and movie data respectively. Logs all requests in a .txt file after logging to the terminal.</figcaption>
                         </figure>
                         <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="https://secret-dusk-34387.herokuapp.com/"><img alt="FriendFinder" src="images/friendfinder.png" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">Matchmaking service based on introversion. Made using Express, SweetAlerts, and Heroku. All the files can be found on its <a href="http://www.github.com/dstarrtrey/FriendFinder">GitHub</a> page</figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
                             <a class="middle" href="/drum-machine"><img alt="React Soundboard" src="images/soundboard.png" class="portfolio-image img-responsive"></a>
                             <figcaption class="caption">Soundboard made using React with a few soundbytes from my own music or friends' voice recordings I have. This was made with create-react-app for freeCodeCamp's Front End Libraries certification. Code is located on <a href="http://www.github.com/dstarrtrey/drum-machine">GitHub</a></figcaption>
                         </figure>
