Adds Eat-Da-Burger app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,10 @@
                     </div>
                     <div class="row col-xs-12">
                         <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
+                            <a class="middle" href="http://rocky-brushlands-55954.herokuapp.com/"><img alt="Burger Devourment Simulator" src="images/eatdaburger.png" class="portfolio-image img-responsive"></a>
+                            <figcaption class="caption">This is an app using MySQL, Express and Handlebars—all deployed to heroku (employing Cloud DB)—to generate a list of burgers, eaten or uneaten. Files used can be found on the <a href="https://github.com/dstarrtrey/burger">GitHub Repository</a></figcaption>
+                        </figure>
+                        <figure class="portfolio-item figure col-sm-6 col-md-4 col-lg-3">
                             <a class="middle" href="http://www.github.com/dstarrtrey/CLI-Storefront"><img alt="CLI Storefront Simulator App" src="images/bamazon-manager.gif" class="portfolio-image img-responsive"></a>
                             <figcaption class="caption">Command Line app that allows the user to make purchases, restock inventory, add new products, add departments, and check total sales and profits by department, all stored in a MySQL database.</figcaption>
                         </figure>
